@@ -29,8 +29,7 @@ import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import jakarta.xml.bind.annotation.XmlTransient;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 
 import org.openl.OpenL;
 import org.openl.binding.IBindingContext;
@@ -78,6 +77,7 @@ import org.openl.util.TableNameChecker;
  *
  * @author snshor
  */
+@Slf4j
 public class DatatypeTableBoundNode implements IMemberBoundNode {
 
     private static final String COMMA_SEPARATED_COLUMN_TITLES = COLUMN_TITLES.stream()
@@ -93,7 +93,6 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
     private static final Pattern CONTEXT_SPLITTER = Pattern.compile("\\s*:\\s*context\\s*");
     public static final String NON_TRANSIENT_FIELD_SUFFIX = "*";
     public static final String TRANSIENT_FIELD_SUFFIX = "~";
-    private static final Logger LOG = LoggerFactory.getLogger(DatatypeTableBoundNode.class);
 
     private final TableSyntaxNode tableSyntaxNode;
     private final DatatypeOpenClass dataType;
@@ -204,22 +203,22 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
                 Class<?> beanClass = classLoader.loadClass(datatypeClassName);
                 byteCodeReadyToLoad = true;
                 validateDatatypeClass(beanClass, fields, bindingContext);
-                LOG.debug("Class '{}' is loaded from classloader.", datatypeClassName);
+                log.debug("Class '{}' is loaded from classloader.", datatypeClassName);
             } catch (ClassNotFoundException e) {
                 try {
                     final byte[] byteCode = buildByteCodeForDatatype(fields);
                     classLoader.addGeneratedClass(datatypeClassName, byteCode);
                     dataType.setBytecode(byteCode);
                     byteCodeReadyToLoad = true;
-                    LOG.debug("Class '{}' is generated and loaded to classloader.", datatypeClassName);
+                    log.debug("Class '{}' is generated and loaded to classloader.", datatypeClassName);
                 } catch (ByteCodeGenerationException e1) {
-                    LOG.debug("Error occurred: ", e1);
-                    String errorMessage = String
-                            .format("Failed to generate a class for datatype '%s'. %s", datatypeClassName, e1.getMessage());
+                    log.debug("Error occurred: ", e1);
+                    String errorMessage = "Failed to generate a class for datatype '%s'. %s"
+                            .formatted(datatypeClassName, e1.getMessage());
                     BindHelper.processError(errorMessage, e1, tableSyntaxNode, bindingContext);
                 } catch (Exception e2) {
-                    LOG.debug("Error occurred: ", e2);
-                    String errorMessage = String.format("Failed to generate a class for datatype '%s'.",
+                    log.debug("Error occurred: ", e2);
+                    String errorMessage = "Failed to generate a class for datatype '%s'.".formatted(
                             datatypeClassName);
                     BindHelper.processError(errorMessage, e2, tableSyntaxNode, bindingContext);
                 }
@@ -286,7 +285,7 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
                 .forEach(e -> contextPropertiesCounter.merge(e.getContextProperty(), 1, Integer::sum));
         for (Entry<String, Integer> entry : contextPropertiesCounter.entrySet()) {
             if (entry.getValue() > 1) {
-                String errorMessage = String.format("Multiple fields refer to the same context property '%s'.",
+                String errorMessage = "Multiple fields refer to the same context property '%s'.".formatted(
                         entry.getKey());
                 BindHelper.processError(errorMessage, tableSyntaxNode, bindingContext);
             }
@@ -358,8 +357,7 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
         String datatypeClassName = dataType.getJavaName();
         IOpenClass superClass = dataType.getSuperClass();
         if (superClass != null && !datatypeClass.getSuperclass().getName().equals(superClass.getJavaName())) {
-            String errorMessage = String.format(
-                    "Invalid parent class in the '%s' class. Update the class so that it is compatible with the datatype.\n",
+            String errorMessage = "Invalid parent class in the '%s' class. Update the class so that it is compatible with the datatype.\n".formatted(
                     datatypeClassName);
             BindHelper.processError(errorMessage, tableSyntaxNode, cxt);
         }
@@ -367,8 +365,7 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
         try {
             datatypeClass.getConstructor();
         } catch (NoSuchMethodException e) {
-            String errorMessage = String.format(
-                    "Default constructor is not found in the '%s' class. \" + \" Update the class so that it is compatible with the datatype.",
+            String errorMessage = "Default constructor is not found in the '%s' class. \" + \" Update the class so that it is compatible with the datatype.".formatted(
                     datatypeClassName);
             BindHelper.processError(errorMessage, tableSyntaxNode, cxt);
         }
@@ -378,7 +375,7 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
             instance = datatypeClass.getDeclaredConstructor().newInstance();
         } catch (IllegalAccessException | InstantiationException | NoSuchMethodException |
                  InvocationTargetException e) {
-            LOG.debug("Error occurred: ", e);
+            log.debug("Error occurred: ", e);
             String errorMessage = String.format(
                     "Default constructor is not found in class '%s' or the class is not instantiatable. " + "Please, update the class to be compatible with the datatype.",
                     datatypeClassName);
@@ -402,7 +399,7 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
                     BindHelper.processError(errorMessage, tableSyntaxNode, cxt);
                 }
             } catch (NoSuchFieldException e) {
-                LOG.debug("Error occurred: ", e);
+                log.debug("Error occurred: ", e);
                 String errorMessage = String.format(
                         "The '%s' %s is not found in the '%s' class. "
                                 + "Update the class so that it is compatible with the datatype.",
@@ -427,8 +424,7 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
                     BindHelper.processError(errorMessage, tableSyntaxNode, cxt);
                 }
             } catch (NoSuchMethodException e) {
-                String errorMessage = String.format(
-                        "The 'get%s' method is not found in the '%s' class. Update the class so that it is compatible with the datatype.",
+                String errorMessage = "The 'get%s' method is not found in the '%s' class. Update the class so that it is compatible with the datatype.".formatted(
                         name,
                         datatypeClassName);
                 name = StringUtils.capitalize(fieldName); // Try old solution (before 5.21.7)
@@ -472,7 +468,7 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
                             }
                         }
                     } catch (ReflectiveOperationException | LinkageError e) {
-                        LOG.debug("Ignored error: ", e);
+                        log.debug("Ignored error: ", e);
                     }
                     if (f) {
                         String errorMessage = String.format(
@@ -532,7 +528,7 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
                         BindHelper.processError(errorMessage, tableSyntaxNode, cxt);
                     }
                 } catch (NoSuchFieldException e) {
-                    LOG.debug("Ignored error: ", e);
+                    log.debug("Ignored error: ", e);
                 }
             }
             boolean g = false;
@@ -582,12 +578,12 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
     }
 
     private void handleExampleValueError(String fieldName, IOpenClass fieldType, GridCellSourceCodeModule exampleValueCellSource, IBindingContext bindingContext) {
-        String errorMessage = String.format("The provided example value '%s' is not supported for the field '%s' of type '%s'. Please provide an example value that matches the field type.", exampleValueCellSource.getCode().trim(), fieldName, fieldType.getName());
+        String errorMessage = "The provided example value '%s' is not supported for the field '%s' of type '%s'. Please provide an example value that matches the field type.".formatted(exampleValueCellSource.getCode().trim(), fieldName, fieldType.getName());
         BindHelper.processError(errorMessage, exampleValueCellSource, bindingContext);
     }
 
     private void handleDefaultValueError(String fieldName, IOpenClass fieldType, GridCellSourceCodeModule defaultValueCellSource, IBindingContext bindingContext) {
-        String errorMessage = String.format("The provided default value '%s' is not supported for the field '%s' of type '%s'. Please provide an default value that matches the field type.", defaultValueCellSource.getCode().trim(), fieldName, fieldType.getName());
+        String errorMessage = "The provided default value '%s' is not supported for the field '%s' of type '%s'. Please provide an default value that matches the field type.".formatted(defaultValueCellSource.getCode().trim(), fieldName, fieldType.getName());
         BindHelper.processError(errorMessage, defaultValueCellSource, bindingContext);
     }
 
@@ -617,7 +613,7 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
                 : !rawFieldName.endsWith(NON_TRANSIENT_FIELD_SUFFIX);
         String fieldName = extractFieldName(rawFieldName);
         if (TableNameChecker.isInvalidJavaIdentifier(fieldName)) {
-            String errorMessage = String.format("Bad field name: '%s'.", fieldName);
+            String errorMessage = "Bad field name: '%s'.".formatted(fieldName);
             BindHelper.processError(errorMessage, nameCellSource, bindingContext);
             return;
         }
@@ -628,7 +624,7 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
             } else if (contextProperty.startsWith(".")) {
                 contextProperty = StringUtils.trim(contextProperty.substring(1));
                 if (TableNameChecker.isInvalidJavaIdentifier(contextProperty)) {
-                    String errorMessage = String.format("Bad context property name: '%s'.", contextProperty);
+                    String errorMessage = "Bad context property name: '%s'.".formatted(contextProperty);
                     BindHelper.processError(errorMessage, nameCellSource, bindingContext);
                     return;
                 }
@@ -646,7 +642,7 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
 
         FieldDescriptionBuilder fieldDescriptionBuilder;
         if (fields.containsKey(fieldName)) {
-            String errorMessage = String.format("Field '%s' is already declared.", fieldName);
+            String errorMessage = "Field '%s' is already declared.".formatted(fieldName);
             BindHelper.processError(errorMessage, nameCellSource, bindingContext);
             return;
         } else if (fields.containsKey(ClassUtils.decapitalize(fieldName)) || fields
@@ -658,7 +654,7 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
             if (fields.containsKey(ClassUtils.capitalize(fieldName))) {
                 f = ClassUtils.capitalize(fieldName);
             }
-            String errorMessage = String.format("Field '%s' conflicts with field '%s'.", fieldName, f);
+            String errorMessage = "Field '%s' conflicts with field '%s'.".formatted(fieldName, f);
             BindHelper.processError(errorMessage, nameCellSource, bindingContext);
         }
         fieldDescriptionBuilder = FieldDescriptionBuilder.create(fieldType.getJavaName())
@@ -696,8 +692,8 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
                 if (!bindingContext.isExecutionMode()) {
                     ICell cell = defaultValueCellSource.getCell();
                     MetaInfoReader metaInfoReader = tableSyntaxNode.getMetaInfoReader();
-                    if (metaInfoReader instanceof BaseMetaInfoReader) {
-                        ((BaseMetaInfoReader<?>) metaInfoReader).addConstant(cell, constantOpenField);
+                    if (metaInfoReader instanceof BaseMetaInfoReader<?> reader) {
+                        reader.addConstant(cell, constantOpenField);
                     }
                 }
             } else {
@@ -764,7 +760,7 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
                         fieldDescriptionBuilder.setMandatoryValue(mandatoryValue);
                     }
                 } catch (Exception e) {
-                    String errorMessage = String.format("The provided value '%s' is not valid for the mandatory column. Please provide a valid value.", mandatoryValueCellSource.getCode().trim());
+                    String errorMessage = "The provided value '%s' is not valid for the mandatory column. Please provide a valid value.".formatted(mandatoryValueCellSource.getCode().trim());
                     BindHelper.processError(errorMessage, mandatoryValueCellSource, bindingContext);
                 }
             }
@@ -828,8 +824,8 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
             dataType.setInstanceClass(datatypeClass);
             moduleOpenClass.addType(dataType);
         } catch (ClassNotFoundException | LinkageError e) {
-            LOG.debug("Error occurred: ", e);
-            String errorMessage = String.format("Failed to load a class for datatype '%s'.", dataType.getJavaName());
+            log.debug("Error occurred: ", e);
+            String errorMessage = "Failed to load a class for datatype '%s'.".formatted(dataType.getJavaName());
             BindHelper.processError(errorMessage, e, tableSyntaxNode, bindingContext);
         } finally {
             fields = null;
@@ -842,8 +838,8 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
         }
         if (!generated) {
             if (generatingInProcess) {
-                throw new OpenLCompilationException(String
-                        .format("Circular dependency with respect to inheritance '%s' is detected.", parentClassName));
+                throw new OpenLCompilationException("Circular dependency with respect to inheritance '%s' is detected."
+                        .formatted(parentClassName));
             }
             generatingInProcess = true;
             try {
@@ -859,27 +855,27 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
                     if (parentOpenClass == null) {
                         byteCodeReadyToLoad = true;
                         throw new OpenLCompilationException(
-                                String.format("Parent class '%s' is not found.", parentClassName));
+                                "Parent class '%s' is not found.".formatted(parentClassName));
                     }
 
                     if (parentOpenClass.getInstanceClass() != null) {// parent class has
                         // errors
                         if (Modifier.isFinal(parentOpenClass.getInstanceClass().getModifiers())) {
                             throw new OpenLCompilationException(
-                                    String.format("Cannot inherit from final class '%s'.", parentClassName));
+                                    "Cannot inherit from final class '%s'.".formatted(parentClassName));
                         }
                         try {
                             parentOpenClass.getInstanceClass().getConstructor();
                         } catch (NoSuchMethodException e) {
                             throw new OpenLCompilationException(
-                                    String.format("Cannot inherit from class '%s'. Default constructor is not found.",
+                                    "Cannot inherit from class '%s'. Default constructor is not found.".formatted(
                                             parentClassName));
                         }
                     }
 
                     if (parentOpenClass instanceof DomainOpenClass) {
                         throw new OpenLCompilationException(
-                                String.format("Parent class '%s' cannot be a domain type.", parentClassName));
+                                "Parent class '%s' cannot be a domain type.".formatted(parentClassName));
                     }
                     dataType.setSuperClass(parentOpenClass);
                 }
@@ -899,12 +895,11 @@ public class DatatypeTableBoundNode implements IMemberBoundNode {
                 IOpenField fieldInParent = superClass.getField(field.getName());
                 if (fieldInParent != null) {
                     if (Objects.equals(fieldInParent.getType(), field.getType())) {
-                        BindHelper.processWarn(String.format("Field '%s' is already declared in parent class '%s'.",
+                        BindHelper.processWarn("Field '%s' is already declared in parent class '%s'.".formatted(
                                 field.getName(),
                                 fieldInParent.getDeclaringClass().getDisplayName(0)), tableSyntaxNode, cxt);
                     } else {
-                        String errorMessage = String.format(
-                                "Field '%s' is already declared in class '%s' with another type.",
+                        String errorMessage = "Field '%s' is already declared in class '%s' with another type.".formatted(
                                 field.getName(),
                                 fieldInParent.getDeclaringClass().getDisplayName(0));
                         BindHelper.processError(errorMessage, tableSyntaxNode, cxt);
