@@ -45,7 +45,7 @@ public class TableVersionTreeNodeBuilder extends BaseTableTreeNodeBuilder {
     @Override
     public String getType(Object nodeObject) {
         TableSyntaxNode tsn = (TableSyntaxNode) nodeObject;
-        return String.format("%s.%s", IProjectTypes.PT_TABLE, tsn.getType()).intern();
+        return "%s.%s".formatted(IProjectTypes.PT_TABLE, tsn.getType()).intern();
     }
 
     @Override
