@@ -1,6 +1,7 @@
 package org.openl.rules.security.standalone.dao;
 
 import java.util.List;
+import java.util.Locale;
 import jakarta.persistence.criteria.CriteriaBuilder;
 import jakarta.persistence.criteria.CriteriaQuery;
 import jakarta.persistence.criteria.Root;
@@ -18,7 +19,7 @@ public class TagDaoImpl extends BaseHibernateDao<Tag> implements TagDao {
         Root<Tag> u = criteria.from(Tag.class);
         criteria.select(u).where(builder.equal(u.get("id"), id)).distinct(true);
         List<Tag> results = getSession().createQuery(criteria).getResultList();
-        return results.isEmpty() ? null : results.get(0);
+        return results.isEmpty() ? null : results.getFirst();
     }
 
     @Override
@@ -30,10 +31,10 @@ public class TagDaoImpl extends BaseHibernateDao<Tag> implements TagDao {
         // Case insensitive
         criteria.select(u)
                 .where(builder.and(builder.equal(u.get("type").get("id"), tagTypeId),
-                        builder.equal(builder.lower(u.get("name")), name.toLowerCase())))
+                        builder.equal(builder.lower(u.get("name")), name.toLowerCase(Locale.ROOT))))
                 .distinct(true);
         List<Tag> results = getSession().createQuery(criteria).getResultList();
-        return results.isEmpty() ? null : results.get(0);
+        return results.isEmpty() ? null : results.getFirst();
     }
 
     @Override
@@ -67,10 +68,10 @@ public class TagDaoImpl extends BaseHibernateDao<Tag> implements TagDao {
         CriteriaQuery<Tag> criteria = builder.createQuery(Tag.class);
         Root<Tag> root = criteria.from(Tag.class);
         criteria.select(root)
-                .where(builder.and(builder.equal(builder.lower(root.get("type").get("name")), tagType.toLowerCase()),
-                        builder.equal(builder.lower(root.get("name")), tagName.toLowerCase())));
+                .where(builder.and(builder.equal(builder.lower(root.get("type").get("name")), tagType.toLowerCase(Locale.ROOT)),
+                        builder.equal(builder.lower(root.get("name")), tagName.toLowerCase(Locale.ROOT))));
         final List<Tag> results = getSession().createQuery(criteria).getResultList();
-        return results.isEmpty() ? null : results.get(0);
+        return results.isEmpty() ? null : results.getFirst();
     }
 
     @Transactional
